--- a/app/templates/layouts/navbar.html
+++ b/app/templates/layouts/navbar.html
@@ -21,13 +21,13 @@
               </li>
 
               <li class="submenu-item  ">
-                <a href=" {{url_for('ukt.testUkt')}} " class='submenu-link'>Testing</a>
+                <a href="{{url_for('ukt.ujiUkt')}}" class='submenu-link'>Uji Data</a>
               </li>
           </div>
         </div>
       </li>
 
-      <li class="menu-item  has-sub">
+      {# <li class="menu-item  has-sub">
         <a href="#" class='menu-link'>
           <i class="bi bi-stack"></i>
           <span>Beasiswa KIP</span>
@@ -45,7 +45,8 @@
               </li>
           </div>
         </div>
-      </li>
+      </li> #}
+
       <li class="menu-item  has-sub">
         <a href="#" class='menu-link'>
           <i class="bi bi-stack"></i>
