--- a/app/templates/admin/user-edit.html
+++ b/app/templates/admin/user-edit.html
@@ -92,7 +92,7 @@
                         </div>
 
                         <div class="col-sm-12 d-flex justify-content-end">
-                          <button type="submit" class="btn btn-primary btn-sm me-1 mb-1 ">Simpan</button>
+                          <button type="submit" class="btn btn-primary btn-sm me-1 mb-1 ">Update</button>
                           <button type="reset" class="btn btn-light-secondary  btn-sm me-1 mb-1">Batal</button>
                         </div>
                       </div>
