--- a/app/templates/admin/user-data.html
+++ b/app/templates/admin/user-data.html
@@ -40,7 +40,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                  {% for data in response %}
+                  {% for data in response.get('data') %}
                   <tr>
                     <td>{{loop.index}}</td>
                     <td>{{data.stambuk}}</td>
@@ -63,6 +63,38 @@
                   {% endfor %}
                 </tbody>
               </table>
+              <nav aria-label="Page navigation example">
+                <ul class="pagination pagination-primary pagination-sm justify-content-end">
+                  {% if response['meta']['has_prev'] %}
+                  <li class="page-item">
+                    <a class="page-link" href="?page={{ response.get('meta').get('prev_page')}}">
+                      <span aria-hidden="true"><i class="bi bi-chevron-left"></i></span>
+                    </a>
+                  </li>
+                  {% else %}
+                  <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
+                      <span aria-hidden="true"><i class="bi bi-chevron-left"></i></span>
+                    </a>
+                  </li>
+                  {% endif %}
+                  {% for pages in range(response.get('meta').get('pages')) %}
+                  <li class="page-item {{'active' if pages == response.get('meta').get('page') -1 else ''}}"><a
+                      class="page-link" href="?page={{pages + 1}}">{{pages + 1}}</a></li>
+                  {% endfor %}
+                  {% if response['meta']['has_next'] %}
+                  <li class="page-item"><a class="page-link" href="?page={{ response.get('meta').get('next_page')}}">
+                      <span aria-hidden="true"><i class="bi bi-chevron-right"></i></span>
+                    </a></li>
+                  {% else %}
+                  <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
+                      <span aria-hidden="true"><i class="bi bi-chevron-right"></i></span>
+                    </a>
+                  </li>
+                  {% endif %}
+                </ul>
+              </nav>
             </div>
           </div>
         </div>
